--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: "Inter", sans-serif !important;
+  font-family: 'Inter', sans-serif !important;
   font-size: 14px;
 }
 
