--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -28,13 +28,13 @@
 
     </div>
   </div>
-  <%- include('navbar') %>
+  <%- include('partial/navbar') %>
   <div style="background-color: #fbfbfb">
     <div class="container pb-5">
       <div class="px-5 pt-4"><%- body %></div>
     </div>
   </div>
-  <%- include('footer') -%>
+  <%- include('partial/footer') -%>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
