add : search events page

--- a/src/views/events.ejs
+++ b/src/views/events.ejs
@@ -16,7 +16,7 @@
 <body>
 
 <div class="container mt-4">
-    <h1>Upcoming Events</h1>
+    <h1>The Events</h1>
     <div class="row">
         <% events.forEach(function(event) { %>
             <div class="col-lg-4 col-md-6 mb-4">
