--- a/src/views/partial/navbar.ejs
+++ b/src/views/partial/navbar.ejs
@@ -42,7 +42,7 @@
           </ul>
         </div>
         <div class="col-3">
-          <form action="https://example.com/search" method="get">
+          <form action="/fe/events/search" method="get">
             <label for="search-input">Search:</label>
             <input type="text" id="search-input" name="q" placeholder="Enter your search term">
             <button type="submit">Search</button>
